--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ timezone:
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+title: VASCO DA GAMA # the main title
 
 tagline: A text-focused Jekyll theme # it will display as the subtitle
 
@@ -23,7 +23,7 @@ description: >- # used by seo meta and the atom feed
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
-url: ""
+url: "https://theopentradeproject.github.io"
 
 github:
   username: github_username # change to your GitHub username
@@ -98,7 +98,8 @@ theme_mode: # [light | dark]
 cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+#avatar:
+avatar: "https://pbs.twimg.com/profile_images/1901280826425221120/G1z55xla_400x400.png"
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
@@ -150,7 +151,7 @@ pwa:
 paginate: 10
 
 # The base URL of your site
-baseurl: ""
+baseurl: "/theopentrade"
 
 # ------------ The following options are not recommended to be modified ------------------
 
