Enabled self-hosted assets for local development

--- a/_config.yml
+++ b/_config.yml
@@ -133,10 +133,8 @@ comments:
 # Self-hosted static assets, optional › https://github.com/cotes2020/chirpy-static-assets
 assets:
   self_host:
-    enabled: # boolean, keep empty means false
-    # specify the Jekyll environment, empty means both
-    # only works if `assets.self_host.enabled` is 'true'
-    env: # [development | production]
+    enabled: true
+    env: development
 
 pwa:
   enabled: true # The option for PWA feature (installable)
@@ -151,7 +149,7 @@ pwa:
 paginate: 10
 
 # The base URL of your site
-baseurl: "/theopentrade"
+baseurl: ""
 
 # ------------ The following options are not recommended to be modified ------------------
 
