--- a/_config.yml
+++ b/_config.yml
@@ -14,9 +14,9 @@ timezone:
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: VASCO DA GAMA # the main title
+title: The Open Trade Project # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the subtitle
+tagline: A data-driven analysis framework for NFL trades
 
 description: >- # used by seo meta and the atom feed
   A minimal, responsive and feature-rich Jekyll theme for technical writing.
@@ -26,10 +26,10 @@ description: >- # used by seo meta and the atom feed
 url: "https://theopentradeproject.github.io"
 
 github:
-  username: github_username # change to your GitHub username
+  username: TheOpenTradeProject # change to your GitHub username
 
 twitter:
-  username: twitter_username # change to your Twitter username
+  username: theopentrade # change to your Twitter username
 
 social:
   # Change to your full name.
