--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ title: The Open Trade Project # the main title
 tagline: A data-driven analysis framework for NFL draft trades
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  A data-driven analysis framework for NFL draft trades
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
